<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation_graph"
    app:startDestination="@id/start_fragment">

    <include app:graph="@navigation/bottom_navigation" />

    <fragment
        android:id="@+id/start_fragment"
        android:name="nferno1.cfreddit.presentation.screens.StartFragment"
        android:label="@string/start"
        android:layout="@layout/fragment_start">
        <action
            android:id="@+id/from_start_to_onboarding"
            app:destination="@id/onboarding_fragment"/>
        <action
            android:id="@+id/from_start_to_main"
            app:destination="@id/bottom_navigation"/>
    </fragment>

    <fragment
        android:id="@+id/onboarding_fragment"
        android:name="nferno1.cfreddit.presentation.screens.onboarding.OnboardingFragment"
        android:label="@string/welcome"
        android:layout="@layout/fragment_onboarding" >
        <action
            android:id="@+id/from_onboarding_to_auth"
            app:destination="@id/auth_fragment"/>
    </fragment>

    <fragment
        android:id="@+id/auth_fragment"
        android:name="nferno1.cfreddit.presentation.screens.onboarding.AuthFragment"
        android:label="@string/auth"
        tools:layout="@layout/fragment_auth">
        <action
            android:id="@+id/from_auth_to_main"
            app:destination="@id/bottom_navigation"/>

    </fragment>

</navigation>