<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/auth_screen_background"
        android:orientation="vertical"
        tools:context=".presentation.screens.onboarding.AuthFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="380dp"
            android:layout_height="370dp"
            android:layout_gravity="center"
            android:layout_weight=".5"
            android:src="@drawable/cfredditf" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_weight=".1"
            android:text="@string/welcom"
            android:textAppearance="@style/onboarding_head"
            android:textSize="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".1"
            android:text="@string/auth_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/auth_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="40dp"
            android:text="@string/enter"
            app:cornerRadius="20dp" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:background="@color/semi_transparent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content" />
    </FrameLayout>
</FrameLayout>